[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nidenai <30Dk81Yz>"]
packages = [
    { include = 'page_loader' },
]


[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"


[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"
requests = "^2.26.0"
coverage = "^6.1.2"
pytest = "^6.2.5"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
coverage = "^6.1.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



