[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nidenai <30Dk81Yz>"]
packages = [
    { include = 'page_loader' },
]


[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
coverage = "^6.1.2"
pytest = "^6.2.5"
bs4 = "^0.0.1"
progress = "^1.6"
loguru = "^0.5.3"
flake8 = "^3.9.2"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
coverage = "^6.1.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



